<resources>
    <!-- Navigation -->
    <string name="app_name">Campus Tutor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_notification">Nachrichten</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_display">Kurse</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_search">Suche</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="register">Registrieren</string>
    <string name="password_forgot">Passwort Vergessen?</string>
    <string name="logo">Logo</string>
    <string name="e_mail_adresse">E-Mail Adresse</string>
    <string name="password">Passwort</string>
    <string name="val_password">Passwort Valide: </string>
    <string name="val_email">E-Mail Valide: </string>

    <!-- User -->
    <string name="username">Username</string>
    <string name="give_username">Username angeben</string>
    <string name="update_user_desc">Bearbeite dein Profil</string>
    <string name="update_user">Profil bearbeiten</string>

    <!-- Filter -->
    <string name="settings_filter">Voreinstellung für Filter</string>

    <!-- Course -->
    <string name="tutoring_p">Private Nachhilfe</string>
    <string name="tutoring_g">Gewerbliche Nachhilfe</string>
    <string name="update_course">Kurs bearbeiten</string>
    <string name="userWithId">User mit der ID </string>
    <string name="noSuchDescription">Keine Beschreibung vorhanden</string>
    <string name="enterEmail">Es muss eine E-Mail eingegeben werden</string>
    <string name="tutoring_bit">Biete Nachhilfe</string>
    <string name="tutoring_search">Suche Nachhilfe</string>

</resources>
