<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <Button
            android:text="@string/login"
            android:layout_width="386dp"
            android:layout_height="57dp"
            android:id="@+id/loginButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
            android:id="@+id/loginEMailTV"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="E-Mail Adresse"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.993"
            tools:ignore="Autofill,LabelFor" />

    <EditText
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="Passwort"
            android:ems="10"
            android:id="@+id/loginPasswordTV"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="220dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton" tools:ignore="Autofill,LabelFor"/>

    <TextView
            android:text="@string/register"
            android:layout_width="330dp"
            android:layout_height="25dp"
            android:id="@+id/loginRegister" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordTV" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.492"
    />
    <TextView
            android:text="@string/password_forgot"
            android:layout_width="330dp"
            android:layout_height="25dp"
            android:id="@+id/loginForgot" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/loginRegister" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="330dp"
            android:layout_height="150dp" app:srcCompat="?attr/colorAccent"
            android:id="@+id/loginLogo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginEMailTV" android:contentDescription="@string/logo"/>
</androidx.constraintlayout.widget.ConstraintLayout>